good catch on the typo, thx copilot

--- a/Plugins/Community Based Plugins/Microsoft Defender XDR Custom Plugin Scenarios/EnrichmentPlugins/EmailEnrichment.yaml
+++ b/Plugins/Community Based Plugins/Microsoft Defender XDR Custom Plugin Scenarios/EnrichmentPlugins/EmailEnrichment.yaml
@@ -157,4 +157,4 @@ SkillGroups:
             | project-rename RequestedBy=RecipientEmailAddress
             | project-rename DeniedBy=AccountDisplayName
             | project EmailTime, SenderFromAddress, SenderDisplayName, Subject, RequestedBy, RecipientEmailAddress1, DeniedBy, DeniedTime, RequestTime,NetworkMessageId,NetworkMessageId1
-            | sort by DeniedTim
+            | sort by DeniedTime
