--- a/Plugins/Community Based Plugins/Microsoft Sentinel Custom Plugin Scenarios/Sentinel Cost Query Plugin/KQL-SentinelCost.yaml
+++ b/Plugins/Community Based Plugins/Microsoft Sentinel Custom Plugin Scenarios/Sentinel Cost Query Plugin/KQL-SentinelCost.yaml
@@ -4,6 +4,36 @@ Descriptor:
   Description: Skills that lookup recent Sentinel Cost Details from Sentinel workspace.
   #Can you lookup what my Sentinel costs are for the past 7 days?
   #Can you provide a detailed summary of my total Sentinel costs for the past 90 days? Be sure to explain what each table is used for within Sentinel and the security value it provides. Also total up all the costs to give me an average monthly cost. Also be sure to give any cost saving recommendations based on my data ingestion.
+
+  Settings:
+    - Name: TenantId
+      Label: TenantId
+      Description: Azure tenant ID where Sentinel exists. 
+      HintText: Azure tenant ID where Sentinel exists. 
+      SettingType: String
+      Required: true
+
+    - Name: SubscriptionId
+      Label: SubscriptionId
+      Description: Azure subscription ID where Sentinel exists.
+      HintText: Azure subscription ID where Sentinel exists.
+      SettingType: String
+      Required: true
+      
+    - Name: WorkspaceName
+      Label: WorkspaceName
+      Description: Log Analytics workspace name for Sentinel. 
+      HintText: Log Analytics workspace name for Sentinel. 
+      SettingType: String
+      Required: true
+
+    - Name: ResourceGroupName
+      Label: ResourceGroupName
+      Description: Resource group where Sentinel workspace exists. 
+      HintText: Resource group where Sentinel workspace exists. 
+      SettingType: String
+      Required: true
+
 SkillGroups:
   - Format: KQL
     Skills:
@@ -19,14 +49,10 @@ SkillGroups:
             Required: true
         Settings:
           Target: Sentinel
-           # The ID of the AAD Organization that the Sentinel workspace is in.
-          TenantId: **ENTRA TENANT GUID**
-          # The id of the Azure Subscription that the Sentinel workspace is in.
-          SubscriptionId: **AZURE SUBSCRIPTION ID**
-          # The name of the Resource Group that the Sentinel workspace is in.
-          ResourceGroupName: **LOG ANALYTICS RESOURCE GROUP NAME**
-          # The name of the Sentinel workspace.
-          WorkspaceName: **LOG ANALYTICS WORKSPACE NAME**
+          TenantId: "{{TenantId}}"
+          SubscriptionId: "{{SubscriptionId}}"
+          ResourceGroupName: "{{ResourceGroupName}}"
+          WorkspaceName: "{{WorkspaceName}}"
           Template: |-
             let fromDateTime=datetime('{{fromDateTime}}');
             let toDateTime=datetime('{{toDateTime}}');
