--- a/Plugins/Community Based Plugins/Microsoft Sentinel Custom Plugin Scenarios/SentinelDailyOperations/KQL_SentinelDailyOperationsSample.yml
+++ b/Plugins/Community Based Plugins/Microsoft Sentinel Custom Plugin Scenarios/SentinelDailyOperations/KQL_SentinelDailyOperationsSample.yml
@@ -3,6 +3,36 @@ Descriptor:
   DisplayName: Sentinel Daily Operations
   Description:  Sentinel Scenarios we use repeatedly for our daily operations.
 
+  Settings:
+    - Name: TenantId
+      Label: TenantId
+      Description: Azure tenant ID where Sentinel exists. 
+      HintText: Azure tenant ID where Sentinel exists. 
+      SettingType: String
+      Required: true
+
+    - Name: SubscriptionId
+      Label: SubscriptionId
+      Description: Azure subscription ID where Sentinel exists.
+      HintText: Azure subscription ID where Sentinel exists.
+      SettingType: String
+      Required: true
+      
+    - Name: WorkspaceName
+      Label: WorkspaceName
+      Description: Log Analytics workspace name for Sentinel. 
+      HintText: Log Analytics workspace name for Sentinel. 
+      SettingType: String
+      Required: true
+
+    - Name: ResourceGroupName
+      Label: ResourceGroupName
+      Description: Resource group where Sentinel workspace exists. 
+      HintText: Resource group where Sentinel workspace exists. 
+      SettingType: String
+      Required: true
+
+
 SkillGroups:
   - Format: KQL
     Skills:
@@ -14,11 +44,11 @@ SkillGroups:
             Description: provide any specific location you want to consider 
             Required: true      
         Settings: 
-          Target: Sentinel   
-          TenantId: xxxxx
-          SubscriptionId: xxxx
-          ResourceGroupName: xxxx
-          WorkspaceName: xxxx
+          Target: Sentinel
+          TenantId: "{{TenantId}}"
+          SubscriptionId: "{{SubscriptionId}}"
+          ResourceGroupName: "{{ResourceGroupName}}"
+          WorkspaceName: "{{WorkspaceName}}"
           Template: |-                    	          
             AzureNetworkAnalyticsIPDetails_CL
             | where isnotempty(ThreatType_s)   
