--- a/Technical Workshops/Custom Plugin Calling Webservice/Plugins/Reflection/API_Plugin_Reflection_GET_Simple_Header.yaml
+++ b/Technical Workshops/Custom Plugin Calling Webservice/Plugins/Reflection/API_Plugin_Reflection_GET_Simple_Header.yaml
@@ -9,8 +9,4 @@ SkillGroups:
   - Format: API
     Settings:
       # Replace this with your own URL where the OpenAPI spec file is located.
-      OpenApiSpecUrl:  http://172.13.112.25:5000/file/API_Plugin_Reflection_OAP
-      I_GET_Simple_Header.yaml
-
-
-
+      OpenApiSpecUrl:  http://172.13.112.25:5000/file/API_Plugin_Reflection_OAP/I_GET_Simple_Header.yaml
