--- a/Plugins/Community Based Plugins/Purview/eDiscovery/eDiscovery_API_Plugin.yaml
+++ b/Plugins/Community Based Plugins/Purview/eDiscovery/eDiscovery_API_Plugin.yaml
@@ -1,8 +1,8 @@
 openapi: 3.0.0
 
 info:
-    title: eDiscovery Case Plugin
-    description: Skills for creating a plugin that will help create eDiscovery case & additional workflows in Purview via Graph API Call
+    title: Security Copilot eDiscovery Assistant
+    description: Skills that use this plugin to create eDiscovery cases and orchestrate additional workflows in Purview via Microsoft Graph API.
     version: "v1"
 servers:
   - url: https://graph.microsoft.com/v1.0/security/cases
